# everest-ci

./: README.md  THIRD_PARTY.md
.github/: renovate.json
.github/workflows/: build-and-deploy-docker-images.yaml  build-kit.yaml  continuous_integration.yml  deploy-build-kit.yaml  deploy-docker-images.yml  deploy-single-docker-image.yml  re-release-clang-format.yaml  test-github-actions.yaml
applications/utils/scripts/: package_version_logger.py
docker/deprecated-images/build-kit/: alpine.Dockerfile  debian.Dockerfile  deprecated_wrapper
docker/deprecated-images/everest-clang-format/: Dockerfile  deprecated_wrapper
docker/images/build-env-base/: Dockerfile  run-clang-format.py
docker/images/build-kit/: alpine.Dockerfile  (+2 more)
docker/images/build-kit-base/: Dockerfile  entrypoint.sh
github-actions/build-and-deploy-docker-image/: action.yaml
github-actions/configure-git/: action.yaml
github-actions/configure-ssh/: action.yaml
github-actions/create-issue-comment/: action.yaml
github-actions/deploy-ci-artifact/: action.yaml
github-actions/deploy-doxygen-docs/: action.yaml
github-actions/find-issue-comment/: action.yaml
github-actions/pull-single-file/: action.yaml
github-actions/render-jinja2/: action.yaml
github-actions/run-clang-format/: README.md  action.yaml
github-actions/setup-ssh/: action.yaml
github-actions/update-issue-comment/: action.yaml
scripts/ci-tools/: .gitignore  README.rst  setup.cfg
scripts/ci-tools/src/everest/ci_tools/: get_includes.py  patch_includes.py
scripts/ci-tools/tests/: __init__.py  test_something.py
(+4 files in other folders)
