[metadata]
name = everest ci tools
version = attr: everest.ci_tools.__version__
author = aw
author_email = aw@pionix.de
description = Yet another generator for a c++ exi codec
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EVerest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.extras_require]
test =
    coverage

[options.entry_points]
console_scripts =
    ev-ci-patch-compile-commands = everest.ci_tools.patch_includes:main

